syntax = "proto3";

package api.houyi.v1;

import "google/api/annotations.proto";
import "common/metric.proto";
import "houyi/common/datasource.proto";

option go_package = "github.com/moon-monitor/moon/pkg/api/houyi/v1;v1";

service Query {
	rpc MetricDatasourceQuery(MetricDatasourceQueryRequest) returns (api.common.MetricDatasourceQueryReply) {
		option (google.api.http) = {
			post: "/v1/metric/datasource/query"
			body: "*"
		};
	}
}

message MetricDatasourceQueryRequest {
	common.MetricDatasourceItem datasource = 1;
	string expr = 2;
	int64 time = 3;
	int64 startTime = 4;
	int64 endTime = 5;
	uint32 step = 6;
}